// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component/⚘ Organism/RegisterForm/Stand Alone already registered 1`] = `
<div
  className="MuiPaper-root-789 MuiPaper-shadow2-793 MuiPaper-rounded-790"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "display": "flex",
        "flexFlow": "column",
      }
    }
  >
    <div
      className="MuiFormControl-root-816"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-826 MuiInputLabel-root-820 MuiInputLabel-formControl-821 MuiInputLabel-animated-824 MuiInputLabel-shrink-823"
        data-shrink={true}
        htmlFor="displayNameDisplayNameInput"
      >
        Display Name
      </label>
      <div
        className="MuiInput-root-830 MuiInput-formControl-831 MuiInput-inkbar-832 MuiInput-underline-836"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-839 MuiInput-inputSingleline-842"
          defaultValue={undefined}
          disabled={false}
          id="displayNameDisplayNameInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="text"
          value="Mr. Adam"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-816"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-826 MuiInputLabel-root-820 MuiInputLabel-formControl-821 MuiInputLabel-animated-824 MuiInputLabel-shrink-823"
        data-shrink={true}
        htmlFor="userNameUserNameInput"
      >
        User Email
      </label>
      <div
        className="MuiInput-root-830 MuiInput-formControl-831 MuiInput-inkbar-832 MuiInput-underline-836"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-839 MuiInput-inputSingleline-842"
          defaultValue={undefined}
          disabled={false}
          id="userNameUserNameInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="email"
          value="adam"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-816"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-826 MuiInputLabel-root-820 MuiInputLabel-formControl-821 MuiInputLabel-animated-824 MuiInputLabel-shrink-823"
        data-shrink={true}
        htmlFor="passwordPasswordInput"
      >
        Password
      </label>
      <div
        className="MuiInput-root-830 MuiInput-formControl-831 MuiInput-inkbar-832 MuiInput-underline-836"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-839 MuiInput-inputSingleline-842"
          defaultValue={undefined}
          disabled={false}
          id="passwordPasswordInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="password"
          value="123"
        />
      </div>
    </div>
  </section>
  <p>
    This Email is already registered! Please 
    <a
      href="/#/login"
    >
      login
    </a>
    !
  </p>
  <button
    className="MuiButtonBase-root-860 MuiButton-root-845 MuiButton-raised-852 MuiButton-raisedPrimary-854"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-847"
    >
      Register & Enjoy!
    </span>
    <span
      className="MuiTouchRipple-root-862"
    />
  </button>
</div>
`;

exports[`Storyshots Component/⚘ Organism/RegisterForm/Stand Alone initial 1`] = `
<div
  className="MuiPaper-root-629 MuiPaper-shadow2-633 MuiPaper-rounded-630"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "display": "flex",
        "flexFlow": "column",
      }
    }
  >
    <div
      className="MuiFormControl-root-656"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-666 MuiInputLabel-root-660 MuiInputLabel-formControl-661 MuiInputLabel-animated-664"
        data-shrink={false}
        htmlFor="displayNameDisplayNameInput"
      >
        Display Name
      </label>
      <div
        className="MuiInput-root-670 MuiInput-formControl-671 MuiInput-inkbar-672 MuiInput-underline-676"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-679 MuiInput-inputSingleline-682"
          defaultValue={undefined}
          disabled={false}
          id="displayNameDisplayNameInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-656"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-666 MuiInputLabel-root-660 MuiInputLabel-formControl-661 MuiInputLabel-animated-664"
        data-shrink={false}
        htmlFor="userNameUserNameInput"
      >
        User Email
      </label>
      <div
        className="MuiInput-root-670 MuiInput-formControl-671 MuiInput-inkbar-672 MuiInput-underline-676"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-679 MuiInput-inputSingleline-682"
          defaultValue={undefined}
          disabled={false}
          id="userNameUserNameInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="email"
          value=""
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-656"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-666 MuiInputLabel-root-660 MuiInputLabel-formControl-661 MuiInputLabel-animated-664"
        data-shrink={false}
        htmlFor="passwordPasswordInput"
      >
        Password
      </label>
      <div
        className="MuiInput-root-670 MuiInput-formControl-671 MuiInput-inkbar-672 MuiInput-underline-676"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-679 MuiInput-inputSingleline-682"
          defaultValue={undefined}
          disabled={false}
          id="passwordPasswordInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="password"
          value=""
        />
      </div>
    </div>
  </section>
  <button
    className="MuiButtonBase-root-700 MuiButton-root-685 MuiButton-raised-692 MuiButton-raisedPrimary-694"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-687"
    >
      Register & Enjoy!
    </span>
    <span
      className="MuiTouchRipple-root-702"
    />
  </button>
</div>
`;

exports[`Storyshots Component/⚘ Organism/RegisterForm/Stand Alone network failure 1`] = `
<div
  className="MuiPaper-root-869 MuiPaper-shadow2-873 MuiPaper-rounded-870"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "display": "flex",
        "flexFlow": "column",
      }
    }
  >
    <div
      className="MuiFormControl-root-896"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-906 MuiInputLabel-root-900 MuiInputLabel-formControl-901 MuiInputLabel-animated-904 MuiInputLabel-shrink-903"
        data-shrink={true}
        htmlFor="displayNameDisplayNameInput"
      >
        Display Name
      </label>
      <div
        className="MuiInput-root-910 MuiInput-formControl-911 MuiInput-inkbar-912 MuiInput-underline-916"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-919 MuiInput-inputSingleline-922"
          defaultValue={undefined}
          disabled={false}
          id="displayNameDisplayNameInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="text"
          value="Mr. Adam"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-896"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-906 MuiInputLabel-root-900 MuiInputLabel-formControl-901 MuiInputLabel-animated-904 MuiInputLabel-shrink-903"
        data-shrink={true}
        htmlFor="userNameUserNameInput"
      >
        User Email
      </label>
      <div
        className="MuiInput-root-910 MuiInput-formControl-911 MuiInput-inkbar-912 MuiInput-underline-916"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-919 MuiInput-inputSingleline-922"
          defaultValue={undefined}
          disabled={false}
          id="userNameUserNameInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="email"
          value="adam"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-896"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-906 MuiInputLabel-root-900 MuiInputLabel-formControl-901 MuiInputLabel-animated-904 MuiInputLabel-shrink-903"
        data-shrink={true}
        htmlFor="passwordPasswordInput"
      >
        Password
      </label>
      <div
        className="MuiInput-root-910 MuiInput-formControl-911 MuiInput-inkbar-912 MuiInput-underline-916"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-919 MuiInput-inputSingleline-922"
          defaultValue={undefined}
          disabled={false}
          id="passwordPasswordInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="password"
          value="123"
        />
      </div>
    </div>
  </section>
  <p>
    Check the internet connection? try again later?
  </p>
  <button
    className="MuiButtonBase-root-940 MuiButton-root-925 MuiButton-raised-932 MuiButton-raisedPrimary-934"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-927"
    >
      Register & Enjoy!
    </span>
    <span
      className="MuiTouchRipple-root-942"
    />
  </button>
</div>
`;

exports[`Storyshots Component/⚘ Organism/RegisterForm/Stand Alone registering 1`] = `
<div
  className="MuiPaper-root-709 MuiPaper-shadow2-713 MuiPaper-rounded-710"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "display": "flex",
        "flexFlow": "column",
      }
    }
  >
    <div
      className="MuiFormControl-root-736"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-746 MuiInputLabel-root-740 MuiInputLabel-formControl-741 MuiInputLabel-animated-744 MuiInputLabel-shrink-743"
        data-shrink={true}
        htmlFor="displayNameDisplayNameInput"
      >
        Display Name
      </label>
      <div
        className="MuiInput-root-750 MuiInput-formControl-751 MuiInput-inkbar-752 MuiInput-underline-756"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-759 MuiInput-inputSingleline-762"
          defaultValue={undefined}
          disabled={false}
          id="displayNameDisplayNameInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="text"
          value="Mr. Adam"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-736"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-746 MuiInputLabel-root-740 MuiInputLabel-formControl-741 MuiInputLabel-animated-744 MuiInputLabel-shrink-743"
        data-shrink={true}
        htmlFor="userNameUserNameInput"
      >
        User Email
      </label>
      <div
        className="MuiInput-root-750 MuiInput-formControl-751 MuiInput-inkbar-752 MuiInput-underline-756"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-759 MuiInput-inputSingleline-762"
          defaultValue={undefined}
          disabled={false}
          id="userNameUserNameInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="email"
          value="adam"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-736"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-746 MuiInputLabel-root-740 MuiInputLabel-formControl-741 MuiInputLabel-animated-744 MuiInputLabel-shrink-743"
        data-shrink={true}
        htmlFor="passwordPasswordInput"
      >
        Password
      </label>
      <div
        className="MuiInput-root-750 MuiInput-formControl-751 MuiInput-inkbar-752 MuiInput-underline-756"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-759 MuiInput-inputSingleline-762"
          defaultValue={undefined}
          disabled={false}
          id="passwordPasswordInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="password"
          value="123"
        />
      </div>
    </div>
  </section>
  <button
    className="MuiButtonBase-root-780 MuiButton-root-765 MuiButton-raised-772 MuiButton-raisedPrimary-774"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-767"
    >
      Register & Enjoy!
    </span>
    <span
      className="MuiTouchRipple-root-782"
    />
  </button>
</div>
`;

exports[`Storyshots Component/⚘ Organism/RegisterForm/Stand Alone validation email sent with additional phrase 1`] = `
<div
  className="MuiPaper-root-1029 MuiPaper-shadow2-1033 MuiPaper-rounded-1030"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "display": "flex",
        "flexFlow": "column",
      }
    }
  >
    <div
      className="MuiFormControl-root-1056"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-1066 MuiInputLabel-root-1060 MuiInputLabel-formControl-1061 MuiInputLabel-animated-1064 MuiInputLabel-shrink-1063"
        data-shrink={true}
        htmlFor="displayNameDisplayNameInput"
      >
        Display Name
      </label>
      <div
        className="MuiInput-root-1070 MuiInput-formControl-1071 MuiInput-inkbar-1072 MuiInput-underline-1076"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-1079 MuiInput-inputSingleline-1082"
          defaultValue={undefined}
          disabled={false}
          id="displayNameDisplayNameInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="text"
          value="Mr. Adam"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-1056"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-1066 MuiInputLabel-root-1060 MuiInputLabel-formControl-1061 MuiInputLabel-animated-1064 MuiInputLabel-shrink-1063"
        data-shrink={true}
        htmlFor="userNameUserNameInput"
      >
        User Email
      </label>
      <div
        className="MuiInput-root-1070 MuiInput-formControl-1071 MuiInput-inkbar-1072 MuiInput-underline-1076"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-1079 MuiInput-inputSingleline-1082"
          defaultValue={undefined}
          disabled={false}
          id="userNameUserNameInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="email"
          value="adam"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-1056"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-1066 MuiInputLabel-root-1060 MuiInputLabel-formControl-1061 MuiInputLabel-animated-1064 MuiInputLabel-shrink-1063"
        data-shrink={true}
        htmlFor="passwordPasswordInput"
      >
        Password
      </label>
      <div
        className="MuiInput-root-1070 MuiInput-formControl-1071 MuiInput-inkbar-1072 MuiInput-underline-1076"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-1079 MuiInput-inputSingleline-1082"
          defaultValue={undefined}
          disabled={false}
          id="passwordPasswordInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="password"
          value="123"
        />
      </div>
    </div>
  </section>
  <p>
    We just sent a email to validate your email address!
     And this is post email validation phrase addition!!!
  </p>
  <button
    className="MuiButtonBase-root-1100 MuiButton-root-1085 MuiButton-raised-1092 MuiButton-raisedPrimary-1094"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-1087"
    >
      Register & Enjoy!
    </span>
    <span
      className="MuiTouchRipple-root-1102"
    />
  </button>
</div>
`;

exports[`Storyshots Component/⚘ Organism/RegisterForm/Stand Alone validation email sent without additional phrase 1`] = `
<div
  className="MuiPaper-root-949 MuiPaper-shadow2-953 MuiPaper-rounded-950"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "display": "flex",
        "flexFlow": "column",
      }
    }
  >
    <div
      className="MuiFormControl-root-976"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-986 MuiInputLabel-root-980 MuiInputLabel-formControl-981 MuiInputLabel-animated-984 MuiInputLabel-shrink-983"
        data-shrink={true}
        htmlFor="displayNameDisplayNameInput"
      >
        Display Name
      </label>
      <div
        className="MuiInput-root-990 MuiInput-formControl-991 MuiInput-inkbar-992 MuiInput-underline-996"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-999 MuiInput-inputSingleline-1002"
          defaultValue={undefined}
          disabled={false}
          id="displayNameDisplayNameInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="text"
          value="Mr. Adam"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-976"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-986 MuiInputLabel-root-980 MuiInputLabel-formControl-981 MuiInputLabel-animated-984 MuiInputLabel-shrink-983"
        data-shrink={true}
        htmlFor="userNameUserNameInput"
      >
        User Email
      </label>
      <div
        className="MuiInput-root-990 MuiInput-formControl-991 MuiInput-inkbar-992 MuiInput-underline-996"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-999 MuiInput-inputSingleline-1002"
          defaultValue={undefined}
          disabled={false}
          id="userNameUserNameInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="email"
          value="adam"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-976"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-986 MuiInputLabel-root-980 MuiInputLabel-formControl-981 MuiInputLabel-animated-984 MuiInputLabel-shrink-983"
        data-shrink={true}
        htmlFor="passwordPasswordInput"
      >
        Password
      </label>
      <div
        className="MuiInput-root-990 MuiInput-formControl-991 MuiInput-inkbar-992 MuiInput-underline-996"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-999 MuiInput-inputSingleline-1002"
          defaultValue={undefined}
          disabled={false}
          id="passwordPasswordInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="password"
          value="123"
        />
      </div>
    </div>
  </section>
  <p>
    We just sent a email to validate your email address!
    
  </p>
  <button
    className="MuiButtonBase-root-1020 MuiButton-root-1005 MuiButton-raised-1012 MuiButton-raisedPrimary-1014"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-1007"
    >
      Register & Enjoy!
    </span>
    <span
      className="MuiTouchRipple-root-1022"
    />
  </button>
</div>
`;
